--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,4 +6,12 @@
     background-color: #81BEF7;
 }
 #back{
+    background-color: #FFBF00;
+}
+
+#start{
+    background-color: #FFBF00;
+}
+#btn_return{
+    background-color: #FFBF00;
 }
